--- a/crates/rave-api/Cargo.toml
+++ b/crates/rave-api/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 [dependencies]
 rave-entity = { path = "../rave-entity" }
-rave-migration = { path = "../rave-migration" }
 tokio = { version = "1.29", features = ["full"] }
-axum = "0.6.18"
-axum-macros = "0.3"
+axum = "0.6"
+axum-macros = "0.4"
 dotenvy = "0.15.7"
-async-graphql-axum = "5.0.10"
+async-graphql-axum = "6.0.11"
+thiserror = "1"
+
+[dependencies.sqlx]
+version = "0.7"
+features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
