--- a/binaries/rave-app-backend/Cargo.toml
+++ b/binaries/rave-app-backend/Cargo.toml
@@ -8,4 +8,5 @@ rave-api = { path = "../../crates/rave-api" }
 dotenv = "0.15.0"
 clap = { version = "4.4.10", features = ["derive"] }
 tokio = { version = "1.29", features = ["full"] }
-env_logger = "0.10.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
