--- a/crates/rave-entity/Cargo.toml
+++ b/crates/rave-entity/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0"
+futures-util = { version = "0.3", features = ["async-await", "compat", "sink"] }
 
 [dependencies.sqlx]
 version = "0.7"
