--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,8 +24,8 @@ jobs:
           username: ubuntu
           key: "${{ secrets.SSH_PRIVATE_KEY_DEV_INSTANCE }}"
           port: 22
-          source: "./target/release/rave-app-backend"
-          target: /home/ubuntu/rave-app-backend
+          source: "./target/release/rave-app-backend_main"
+          target: /home/ubuntu/
 
       - name: restart dev service
         uses: appleboy/ssh-action@v1.0.2
