--- a/crates/rave-api/Cargo.toml
+++ b/crates/rave-api/Cargo.toml
@@ -15,13 +15,12 @@ serde_json = "1.0"
 
 tokio = { version = "1.29", features = ["full"] }
 tower-http = { version = "0.4.0", features = ["trace"] }
-reqwest = { version = "0.11", features = ["json"] }
 
 async-graphql-axum = "6.0.11"
-axum-jwks = "0.5"
 axum-macros = "0.4"
 
 rave-entity = { path = "../rave-entity" }
+axum-jwks = { path = "../axum-jwks" }
 
 [dependencies.sqlx]
 version = "0.7"
@@ -30,3 +29,8 @@ features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
 [dependencies.axum]
 version = "0.6"
 features = ["tracing", "macros", "json", "ws", "multipart", "form"]
+
+[dependencies.reqwest]
+version = "0.11"
+features = [ "json", "rustls-tls" ]
+default-features = false
