--- a/crates/rave-api-iam/Cargo.toml
+++ b/crates/rave-api-iam/Cargo.toml
@@ -1,36 +1,24 @@
 [package]
-name = "rave-api"
+name = "rave-api-iam"
 version = "0.1.0"
 edition = "2021"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-dotenvy = "^0.15"
 thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
 tracing = "^0.1"
+async-recursion = "^1.0"
 async-trait = "^0.1"
 tokio = { version = "1.29", features = ["full"] }
-tower-http = { version = "0.5.0", features = ["trace"] }
-
-async-graphql-axum = "7.0"
-axum-macros = "0.4"
 
 rave-entity = { path = "../rave-entity" }
-rave-api-iam = { path = "../rave-api-iam"  }
+axum-jwks = { path = "../../libraries/axum-jwks" }
+async-graphql-axum = "7.0"
 
 [dependencies.axum]
 version = "0.7"
 features = ["tracing", "tokio", "macros", "json", "multipart", "form"]
 default-features = false
-
-[dependencies.reqwest]
-version = "0.11"
-features = [ "json", "rustls-tls" ]
-default-features = false
-
-[features]
-default = ["cors", "tempfile"]
-
-cors = ["tower-http/cors"]
-tempfile = ["rave-entity/tempfile"]
