--- a/crates/rave-entity/Cargo.toml
+++ b/crates/rave-entity/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+uuid = { version = "1.6", features = [ "v4", "serde" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
-# futures-util = { version = "0.3", features = ["async-await", "compat", "sink"] }
 
 [dependencies.sqlx]
 version = "0.7"
@@ -15,3 +15,6 @@ features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
 
 [dependencies.async-graphql]
 version = "7.0.0"
+
+[features]
+tempfile = ["async-graphql/tempfile"]
