--- a/crates/rave-core-database/Cargo.toml
+++ b/crates/rave-core-database/Cargo.toml
@@ -1,20 +1,15 @@
 [package]
-name = "rave-entity"
+name = "rave-core-database"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-uuid = { version = "1.6", features = [ "v4", "serde" ] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+
+rave-core-common = { path = "../rave-core-common" }
 
 [dependencies.sqlx]
 version = "0.7"
 default-features = false
 features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"]
-
-[dependencies.async-graphql]
-version = "7.0.0"
-
-[features]
-tempfile = ["async-graphql/tempfile"]
