--- a/crates/rave-core-asset/Cargo.toml
+++ b/crates/rave-core-asset/Cargo.toml
@@ -9,7 +9,11 @@ edition = "2021"
 async-trait = "^0.1"
 rave-core-database = { path = "../rave-core-database" }
 rave-core-common = { path = "../rave-core-common" }
+serde = { version = "1", features = ["derive"] }
+aws-config= { version = "1.1.1", features = ["behavior-version-latest"] }
+aws-sdk-s3= { version = "1.11.0", features = ["rt-tokio"] }
 
 [dependencies.tokio]
 version = "1.29"
 features = [ "full" ]
+
