--- a/crates/rave-core-asset/Cargo.toml
+++ b/crates/rave-core-asset/Cargo.toml
@@ -10,10 +10,16 @@ async-trait = "^0.1"
 rave-core-database = { path = "../rave-core-database" }
 rave-core-common = { path = "../rave-core-common" }
 serde = { version = "1", features = ["derive"] }
-aws-config= { version = "1.1.1", features = ["behavior-version-latest"] }
-aws-sdk-s3= { version = "1.11.0", features = ["rt-tokio"] }
+
+aws-config= { version = "1.1.1", features = ["behavior-version-latest"], optional = true}
+aws-sdk-s3= { version = "1.11.0", features = ["rt-tokio"], optional = true }
+aws-smithy-runtime-api = { version = "1.1.1", optional = true }
 
 [dependencies.tokio]
 version = "1.29"
 features = [ "full" ]
 
+[features]
+default = ["aws-s3-data-provider"]
+
+aws-s3-data-provider = ["aws-config", "aws-sdk-s3", "aws-smithy-runtime-api"]
