--- a/binaries/rave-app-backend/Cargo.toml
+++ b/binaries/rave-app-backend/Cargo.toml
@@ -10,3 +10,8 @@ clap = { version = "4.4.10", features = ["derive"] }
 tokio = { version = "1.29", features = ["full"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+rave-embedded-database = { path = "../../crates/rave-embedded-database", optional = true }
+
+[features]
+embedded-database = ["dep:rave-embedded-database"]
