--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -17,21 +17,21 @@ jobs:
           command: build
           args: -p rave-app-backend --release
 
-      - name: push binary to dev instance
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ec2-52-47-32-158.eu-west-3.compute.amazonaws.com
-          username: ubuntu
-          key: "${{ secrets.SSH_PRIVATE_KEY_DEV_INSTANCE }}"
-          port: 22
-          source: "./target/release/rave-app-backend"
-          target: /home/ubuntu/
+# - name: push binary to dev instance
+#   uses: appleboy/scp-action@v0.1.7
+#   with:
+#     host: ec2-52-47-32-158.eu-west-3.compute.amazonaws.com
+#     username: ubuntu
+#     key: "${{ secrets.SSH_PRIVATE_KEY_DEV_INSTANCE }}"
+#     port: 22
+#     source: "./target/release/rave-app-backend"
+#     target: /home/ubuntu/
 
-      - name: restart dev service
-        uses: appleboy/ssh-action@v1.0.2
-        with:
-          host: ec2-52-47-32-158.eu-west-3.compute.amazonaws.com
-          username: ubuntu
-          key: "${{ secrets.SSH_PRIVATE_KEY_DEV_INSTANCE }}"
-          port: 22
-          script: whoami
+# - name: restart dev service
+#   uses: appleboy/ssh-action@v1.0.2
+#   with:
+#     host: ec2-52-47-32-158.eu-west-3.compute.amazonaws.com
+#     username: ubuntu
+#     key: "${{ secrets.SSH_PRIVATE_KEY_DEV_INSTANCE }}"
+#     port: 22
+#     script: whoami
